# basicj2k

./: .gitmodules  CMakeLists.txt
include/: j2kconverter.h
src/: CMakeLists.txt  j2kconverter.cpp
